# itsy

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  README.md  package.json  smallcode.toml
.claude/: settings.json
bench/: itsy_agent.py
crates/bench-tui/: Cargo.toml
crates/bench-tui/src/: main.rs
crates/itsy/: Cargo.toml
crates/itsy/src/: adapters.rs  api.rs  bonescript_guide.rs  cognition_adapter.rs  commands.rs  compiled.rs  config.rs  escalation.rs  eval_runner.rs  executor.rs  features_adapter.rs  fullscreen.rs  governor.rs  init_wizard.rs  interrupt.rs  knowledge.rs  lib.rs  loops_adapter.rs  lsp.rs  mcp_bridge.rs  memory.rs  model.rs  model_client.rs  paths.rs  plugins.rs  runtime.rs  security.rs  session.rs  session_log.rs  settings.rs  token_monitor.rs  tools.rs  tools_impl.rs  trace_recorder.rs  tui.rs  verification.rs
crates/itsy/src/adapters/: acp.rs
crates/itsy/src/assets/prompts/: classify_task.txt  contract_active.txt  contract_proposal.txt  error_diagnosis.txt  multi_file_edit.txt  semantic_merge.txt  summarize_file.txt  system.txt  verify_and_fix.txt
crates/itsy/src/code_graph/: db.rs  indexer.rs  language.rs  mod.rs  query.rs
crates/itsy/src/compiled/: extensions.rs  features.rs  flows.rs  logger.rs  metrics.rs  providers.rs  schemas.rs  tool_router.rs  two_stage_router.rs
crates/itsy/src/compiled/cognition/: cache.rs  loops.rs  prompts.rs  repair.rs  traces.rs  validate.rs
crates/itsy/src/compiled/features/: checkpoints.rs  context_retriever.rs  multi_file_edit.rs  prompts.rs  verify_and_fix.rs
crates/itsy/src/compiled/providers/: openai_compat.rs  ssrf_guard.rs
crates/itsy/src/fullscreen_widgets/: code_cell.rs  mod.rs  output_block.rs  slash_overlay.rs  status_line.rs  symbols.rs  theme.rs  todo.rs
crates/itsy/src/governor/: early_stop.rs
crates/itsy/src/memory/: evidence.rs
crates/itsy/src/model/: adaptive_router.rs  adaptive_temp.rs  chain.rs  chat_log.rs  profiles.rs  prompts.rs  reviewer.rs  router.rs  thinking_budget.rs
crates/itsy/src/plugins/: loader.rs  skills.rs
crates/itsy/src/runtime/: agent_helpers.rs  agent_loop.rs  cognition.rs  evaluator.rs  extensions.rs  features.rs  flows.rs  logger.rs  mcp_server.rs  metrics.rs  schemas.rs  tool_guidance.rs  tool_router.rs  two_stage_router.rs
crates/itsy/src/runtime/cognition/: budget.rs  cache.rs  loops.rs  prompts.rs  repair.rs  router.rs  traces.rs  validate.rs
crates/itsy/src/runtime/features/: checkpoints.rs  clarify.rs  commit_message.rs  context_retriever.rs  contract_review.rs  decompose.rs  diagnose.rs  multi_file_edit.rs  policy.rs  prompts.rs  repair.rs  semantic_merge.rs  summarize.rs  verify_and_fix.rs
crates/itsy/src/runtime/providers/: openai_compat.rs  ssrf_guard.rs  types.rs
crates/itsy/src/session/: bootstrap.rs  clarify.rs  compaction.rs  contract.rs  file_state.rs  git_context.rs  images.rs  multi.rs  persistence.rs  plan_tracker.rs  references.rs  share.rs  snapshot.rs  tokens.rs  undo.rs
crates/itsy/src/tools_impl/: dedup.rs  file_tree.rs  mcp_client.rs  read_tracker.rs  shell_session.rs  test_runner.rs  trust_decay.rs  web_browse.rs
crates/itsy/tests/: negotiate_assertions_test.rs
docs/: BENCHMARK_REPORT.md  DEBT.md  LESSONS.md  PLAN.md  contracts.md  (+4 more)
(+3798 files in other folders)
