[workspace]
members = ["crates/itsy"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures = "0.3"
async-stream = "0.3"
regex = "1"
once_cell = "1"
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
toml = "0.8"
ratatui = "0.29"
crossterm = "0.28"
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.2"
shell-words = "1"
walkdir = "2"
ignore = "0.4"
tempfile = "3"
nix = { version = "0.29", features = ["signal", "process"] }
which = "7"
url = "2"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
parking_lot = "0.12"
indexmap = { version = "2", features = ["serde"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
