[package]
name = "bench-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Live benchmark dashboard for itsy"

[[bin]]
name = "itsy-bench"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
ratatui.workspace = true
crossterm.workspace = true
chrono = { workspace = true, features = ["serde"] }
